--- a/css/styles.css
+++ b/css/styles.css
@@ -1563,3 +1563,9 @@ body.premium-active #premium-btn {
   width: 20px;
   height: 20px;
 }
+
+
+
+.slide-description-new {
+  display: none !important;
+}
