--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,8 @@ a { color:inherit; text-decoration:none; }
 
 .tool-btn svg{
 
-width: 30px;
-height: 25px;
+width: 20px;
+height: 20px;
 stroke-width: 2;
 
    
@@ -1878,6 +1878,16 @@ z-index: 5;
 
 /* HEADER MOBILE — layout 83x77 SOMENTE nos ícones (não no Premium) */
 @media (max-width: 768px) {
+
+
+.tool-btn svg{
+
+width: 30px;
+height: 25px;
+stroke-width: 2;
+
+   
+}
 
 
    
